fixed bug with increasing scale

--- a/index.html
+++ b/index.html
@@ -40,73 +40,76 @@
 			<div class="topmenu">
 				<ul class="menu">
 					<li><a href="#">Главная</a></li>
-					<li><a href="#">Путешествие<span class="triangle">&#9660;</span></a>
-						<ul class="submenu">
-							<li><a href="#">Путешествие 1</a></li>
-							<li><a href="#">Путешествие 2</a></li>
-							<li><a href="#">Путешествие 3</a></li>
-							<li><a href="#">Путешествие 4</a></li>
-							<li><a href="#">Путешествие 5</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Услуги<span class="triangle">&#9660;</span></a>
-						<ul class="submenu">
-							<li><a href="#">Услуга 1</a></li>
-							<li><a href="#">Услуга 2</a></li>
-							<li><a href="#">Услуга 3</a></li>
-							<li><a href="#">Услуга 4</a></li>
-							<li><a href="#">Услуга 5</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Партнерам<span class="triangle">&#9660;</span></a>
-						<ul class="submenu">
-							<li><a href="#">Предложение 1</a></li>
-							<li><a href="#">Предложение 2</a></li>
-							<li><a href="#">Предложение 3</a></li>
-							<li><a href="#">Предложение 4</a></li>
-							<li><a href="#">Предложение 5</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Отзывы клиентов</a></li>
-					<li><a href="#">О нас</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-			</div>
-			<!-- Content -->
-			<div class="info">
-				<h2>Информация</h2>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-			</div>
-			<div class="news">
-				<h2>Новости</h2>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
-				<p>Lorem ipsum dolor sit amet</p>
+						<li><a href="#">Путешествие<span class="triangle">&#9660;</span></
+						a>
+							<ul class="submenu">
+								<li><a href="#">Путешествие 1</a></li>
+								<li><a href="#">Путешествие 2</a></li>
+								<li><a href="#">Путешествие 3</a></li>
+								<li><a href="#">Путешествие 4</a></li>
+								<li><a href="#">Путешествие 5</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Услуги<span class="triangle">&#9660;</span></a>
+							<ul class="submenu">
+								<li><a href="#">Услуга 1</a></li>
+								<li><a href="#">Услуга 2</a></li>
+								<li><a href="#">Услуга 3</a></li>
+								<li><a href="#">Услуга 4</a></li>
+								<li><a href="#">Услуга 5</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Партнерам<span class="triangle">&#9660;</span></a>
+							<ul class="submenu">
+								<li><a href="#">Предложение 1</a></li>
+								<li><a href="#">Предложение 2</a></li>
+								<li><a href="#">Предложение 3</a></li>
+								<li><a href="#">Предложение 4</a></li>
+								<li><a href="#">Предложение 5</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Отзывы клиентов</a></li>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</div>
+					<!-- Content -->
+			<div class="content">
+				<div class="info">
+					<h2>Информация</h2>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+				</div>
+				<div class="news">
+					<h2>Новости</h2>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+					<p>Lorem ipsum dolor sit amet</p>
+				</div>
 			</div>
 		</div>
 		<footer>
