--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 			<div class="topmenu">
 				<ul class="menu">
 					<li><a href="#">Главная</a></li>
-						<li><a href="#">Путешествие<span class="triangle">&#9660;</span></
-						a>
+						<li><a href="#">Путешествие<span class="triangle">&#9660;</span></a>
 							<ul class="submenu">
 								<li><a href="#">Путешествие 1</a></li>
 								<li><a href="#">Путешествие 2</a></li>
