--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 					</div>
 					<!-- Countries -->
 					<div class="countries">
-						<a href="#"><img src="img/i-flag.png" alt="Фланг Индии"><br>Индия</a>
-						<a href="#"><img src="img/n-flag.png" alt="Флаг Непал"><br>Непал</a>
-						<a href="#"><img src="img/t-flag.png" alt="Флаг Тибет"><br>Тибет</a>
-						<a href="#"><img src="img/b-flag.png" alt="Флаг Бутан"><br>Бутан</a>
-						<a href="#"><img src="img/s-flag.png" alt="Флаг Шри Ланка"><br>Шри-Ланка</a>
-						<a href="#"><img src="img/m-flag.png" alt="Флаг Мальдивы"><br>Мальдивы</a>
+						<a class="india" href="#"><p>Индия</p></a>
+						<a class="nepal" href="#"><p>Непал</p></a>
+						<a class="tibet" href="#"><p>Тибет</p></a>
+						<a class="butan" href="#"><p>Бутан</p></a>
+						<a class="sri-lanka" href="#"><p>Шри-Ланка</p></a>
+						<a class="maldives" href="#"><p>Мальдивы</p></a>
 					</div>
 				</div>
 			</header>
@@ -40,7 +40,7 @@
 			<div class="topmenu">
 				<ul class="menu">
 					<li><a href="#">Главная</a></li>
-					<li><a href="#">Путешествие<span class="triangle">&#9660;</span></a>
+					<li><a class="triangle" href="#">Путешествие</a>
 						<ul class="submenu">
 							<li><a href="#">Путешествие 1</a></li>
 							<li><a href="#">Путешествие 2</a></li>
@@ -49,7 +49,7 @@
 							<li><a href="#">Путешествие 5</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Услуги<span class="triangle">&#9660;</span></a>
+					<li><a class="triangle" href="#">Услуги</a>
 						<ul class="submenu">
 							<li><a href="#">Услуга 1</a></li>
 							<li><a href="#">Услуга 2</a></li>
@@ -58,7 +58,7 @@
 							<li><a href="#">Услуга 5</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Партнерам<span class="triangle">&#9660;</span></a>
+					<li><a class="triangle" href="#">Партнерам</a>
 						<ul class="submenu">
 							<li><a href="#">Предложение 1</a></li>
 							<li><a href="#">Предложение 2</a></li>
