maked countries list

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 			<header class="clearfix">
 			<!-- Left part -->
 			<!-- LOGO -->
-				<a href="#"><div class="logo">
+				<div class="logo">
+					<a href="#">
 					<img src="img/logo.png" alt="Логотип">
-					<p>Путешествия по Азии</p>
-				</div></a>
+					<span>Путешествия по Азии</span>
+					</a>
+				</div>
 				<!-- right part -->
 				<div class="right-box">
 				<!-- Contacts -->
@@ -25,14 +27,14 @@
 							<address class="e-mail">info@asia-holidays.com</address>
 					</div>
 					<!-- Countries -->
-					<div class="countries">
-						<a class="india" href="#"><p>Индия</p></a>
-						<a class="nepal" href="#"><p>Непал</p></a>
-						<a class="tibet" href="#"><p>Тибет</p></a>
-						<a class="butan" href="#"><p>Бутан</p></a>
-						<a class="sri-lanka" href="#"><p>Шри-Ланка</p></a>
-						<a class="maldives" href="#"><p>Мальдивы</p></a>
-					</div>
+					<ul class="countries">
+						<li><a class="india" href="#">Индия</a></li>
+						<li><a class="nepal" href="#">Непал</a></li>
+						<li><a class="tibet" href="#">Тибет</a></li>
+						<li><a class="butan" href="#">Бутан</a></li>
+						<li><a class="sri-lanka" href="#">Шри-Ланка</a></li>
+						<li><a class="maldives" href="#">Мальдивы</a></li>
+					</ul>
 				</div>
 			</header>
 			<div class="photo"><img src="img/header-bg.png" alt="Palms"></div>
