--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="topmenu">
 				<ul class="menu">
 					<li><a href="#">Главная</a></li>
-					<li><a class="triangle" href="#">Путешествие</a>
+					<li><a href="#">Путешествие</a>
 						<ul class="submenu">
 							<li><a href="#">Путешествие 1</a></li>
 							<li><a href="#">Путешествие 2</a></li>
