--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			<div class="topmenu">
 				<ul class="menu">
 					<li><a href="#">Главная</a></li>
-					<li><a href="#">Путешествие</a>
-						<ul class="submenu">
+					<li class="triangle"><a href="#">Путешествие</a>
+						<ul>
 							<li><a href="#">Путешествие 1</a></li>
 							<li><a href="#">Путешествие 2</a></li>
 							<li><a href="#">Путешествие 3</a></li>
@@ -51,8 +51,8 @@
 							<li><a href="#">Путешествие 5</a></li>
 						</ul>
 					</li>
-					<li><a class="triangle" href="#">Услуги</a>
-						<ul class="submenu">
+					<li class="triangle"><a href="#">Услуги</a>
+						<ul>
 							<li><a href="#">Услуга 1</a></li>
 							<li><a href="#">Услуга 2</a></li>
 							<li><a href="#">Услуга 3</a></li>
@@ -60,8 +60,8 @@
 							<li><a href="#">Услуга 5</a></li>
 						</ul>
 					</li>
-					<li><a class="triangle" href="#">Партнерам</a>
-						<ul class="submenu">
+					<li class="triangle"><a href="#">Партнерам</a>
+						<ul>
 							<li><a href="#">Предложение 1</a></li>
 							<li><a href="#">Предложение 2</a></li>
 							<li><a href="#">Предложение 3</a></li>
